--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,22 @@
 [tool.poetry]
+authors = ["Denis Rosset <physics@denisrosset.com>"]
+description = "Modern tools for scientific Python (tutorials)"
 name = "scipython"
 version = "0.1.0"
-description = "Modern tools for scientific Python (tutorials)"
-authors = ["Denis Rosset <physics@denisrosset.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
 Sphinx = "^4.4.0"
 myst-nb = "^0.13.2"
+python = "^3.8"
+sphinx-book-theme = "^0.2.0"
 sphinx-panels = "^0.6.0"
 sphinxcontrib-bibtex = "^2.4.1"
-sphinx-book-theme = "^0.2.0"
 
 [tool.poetry.dev-dependencies]
+esbonio = "^0.9.0"
+black = "^22.1.0"
+mypy = "^0.931"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+requires = ["poetry-core>=1.0.0"]
