--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
   push:
     branches:
-    - main
+    - master
 
 # This job installs dependencies, build the book, and pushes it to `gh-pages`
 jobs:
