--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,6 @@
 name: deploy-website
 
-# Only run this when the master branch changes
+# Only run this when the main branch changes
 on:
   pull_request:
   push:
