--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.8"
 sphinx-book-theme = "^0.2.0"
 sphinx-panels = "^0.6.0"
 sphinxcontrib-bibtex = "^2.4.1"
+linkify-it-py = "^1.0.3"
 
 [tool.poetry.dev-dependencies]
 esbonio = "^0.9.0"
